Fixed: Only like hovers instead of span. New: Only unexpired posts are visible to the user now

--- a/client/src/components/Emortions/Emortion.css
+++ b/client/src/components/Emortions/Emortion.css
@@ -27,7 +27,7 @@
     width: 100%;
 }
 
-.card-body:hover span{
+.like:hover {
     width: 35px;
     height: 35px; 
     display: inline-block; 
